[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "twins-livekit-local"
version = "0.1.0"
description = "Local hosting framework for the LiveKit proxy twin"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "twins-livekit>=0.1.0",
    "gunicorn>=22.0,<24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[tool.setuptools.packages.find]
include = ["twins_livekit_local*"]
